--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
         <h2>Admin - Restaurant Leila</h2>
         <nav class="navigation-principale">
             <ul>
-                <li class="actif">Catégories</li>
-                <li>Plats</li>
-                <li>Vins</li>
+                <li data-collection="categories" class="actif">Catégories</li>
+                <li data-collection="plats">Plats</li>
+                <li data-collection="vins">Vins</li>
             </ul>
         </nav>
     </header>
@@ -52,5 +52,7 @@
             </tr>
         </tbody>
     </table>
+
+    <script src="ressources/js/leila-admin.js"></script>
 </body>
 </html>
